[package]
name = "hyperswarm-dht"
version = "0.1.0"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "rust implementation of the DHT powering the hyperswarm stack"
documentation = "https://docs.rs/hyperswarm-dht/"
repository = "https://github.com/mattsse/hyperswarm-dht"
authors = ["Matthias Seitz <matthias.seitz@tum.de>"]
edition = "2018"

[build-dependencies]
prost-build = "0.6.1"

[dependencies]
blake2-rfc = "0.2.18"
rand = "0.7.3"
anyhow = "1.0.31"
bytes = "0.5.5"
prost = "0.6.1"
arrayvec = "0.5.1"
sha2 = "0.8.0"
uint = "0.8"
futures = "0.3.5"
futures_codec = "0.4.0"
tokio = { version = "0.2.21", features = [ "udp"] }
tokio-util = { version = "0.3.1", features = [ "udp", "codec"] }
wasm-timer = "0.2.4"
fnv = "1.0.7"
structopt = { version = "0.3.15", optional = true }
log = "0.4.8"


[features]
cli = ["structopt"]

[dev-dependencies]
quickcheck = "0.9.2"
async-std = "1.6.2"

