[package]
name = "hyperswarm-dht"
edition = "2018"
description = "rust implementation of the DHT powering the hyperswarm stack"
version = "0.1.0"
authors = ["Matthias Seitz <matthias.seitz@tum.de>"]
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/hyperswarm-dht/"
repository = "https://github.com/mattsse/hyperswarm-dht"
keywords = ["dat", "peer-to-peer", "networking"]
categories = ["network-programming", "asynchronous"]

[build-dependencies]
prost-build = "0.6.1"

[dependencies]
rand = "0.7.3"
anyhow = "1.0.31"
bytes = "0.5.5"
prost = "0.6.1"
arrayvec = "0.5.1"
sha2 = "0.8.0"
uint = "0.8"
futures = "0.3.5"
futures_codec = "0.4.0"
tokio = { version = "0.2.21", features = [ "udp" ] }
tokio-util = { version = "0.3.1", features = [ "udp", "codec" ] }
wasm-timer = "0.2.4"
fnv = "1.0.7"
structopt = { version = "0.3.15", optional = true }
log = "0.4.8"
pretty_env_logger = "0.4.0"
ed25519-dalek = "1.0.0-pre.3"
blake2 = "0.9.0"


[features]
cli = ["structopt"]

[dev-dependencies]
tokio = { version = "0.2.21", features = [ "full" ] }
quickcheck = "0.9.2"
async-std = "1.6.2"

